# rune

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  action.yml  announcement_tip.toml  cliff.toml  flake.nix  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  rune-acp.spec  rune.spec
rune-rs/app-server/: Cargo.toml  README.md
rune-rs/app-server-protocol/: Cargo.toml
rune-rs/app-server-protocol/schema/json/: ApplyPatchApprovalParams.json  ChatgptAuthTokensRefreshParams.json  ClientRequest.json  EventMsg.json  ExecCommandApprovalParams.json  FuzzyFileSearchResponse.json  ServerNotification.json  ServerRequest.json  rune_app_server_protocol.schemas.json
rune-rs/app-server-protocol/schema/typescript/: ApplyPatchApprovalParams.ts  AskForApproval.ts  CollaborationMode.ts  ErrorEvent.ts  ExecCommandApprovalParams.ts  FuzzyFileSearchResult.ts  RuneErrorInfo.ts  StreamErrorEvent.ts  index.ts
rune-rs/app-server-protocol/src/: experimental_api.rs  export.rs
rune-rs/app-server-protocol/src/protocol/: common.rs  thread_history.rs  v1.rs  v2.rs
rune-rs/app-server-protocol/tests/: schema_fixtures.rs
rune-rs/app-server-test-client/: Cargo.toml  README.md
rune-rs/app-server-test-client/src/: lib.rs  main.rs
rune-rs/app-server/src/: bespoke_event_handling.rs  config_api.rs  dynamic_tools.rs  filters.rs  fuzzy_file_search.rs  lib.rs  main.rs  message_processor.rs  models.rs  outgoing_message.rs  rune_message_processor.rs  transport.rs
rune-rs/app-server/tests/common/: Cargo.toml  auth_fixtures.rs  config.rs  lib.rs  mcp_process.rs  models_cache.rs  rollout.rs
rune-rs/app-server/tests/suite/: archive_thread.rs  auth.rs  config.rs  create_thread.rs  fork_thread.rs  fuzzy_file_search.rs  interrupt.rs  list_resume.rs  login.rs  mod.rs  output_schema.rs  rune_message_processor_flow.rs  send_message.rs  set_default_model.rs  user_agent.rs  user_info.rs
rune-rs/arg0/: Cargo.toml
rune-rs/arg0/src/: lib.rs
rune-rs/cli/: Cargo.toml
rune-rs/cli/src/: app_cmd.rs  debug_sandbox.rs  lib.rs  login.rs  main.rs  mcp_cmd.rs  wsl_paths.rs
rune-rs/cli/src/desktop_app/: mac.rs
rune-rs/cli/tests/: execpolicy.rs  features.rs  mcp_add_remove.rs  mcp_list.rs
rune-rs/cloud-requirements/: Cargo.toml
rune-rs/cloud-requirements/src/: lib.rs
rune-rs/core/: Cargo.toml  README.md  config.schema.json  gpt_5_1_prompt.md  gpt_5_2_prompt.md  models.json  prompt_with_apply_patch_instructions.md
rune-rs/core/src/: analytics_client.rs  api_bridge.rs  apply_patch.rs  auth.rs  client.rs  client_common.rs  codex.rs  compact.rs  compact_remote.rs  connectors.rs  custom_prompts.rs  default_client.rs  env.rs  environment_context.rs  error.rs  event_mapping.rs  exec.rs  exec_env.rs  exec_policy.rs  features.rs  file_watcher.rs  flags.rs  git_info.rs  landlock.rs  lib.rs  mcp_connection_manager.rs  mcp_tool_call.rs  memory_trace.rs  mentions.rs  message_history.rs  model_provider_info.rs  otel_init.rs  parse_command.rs  path_utils.rs  personality_migration.rs  powershell.rs  project_doc.rs  review_prompts.rs  rune.rs  rune_delegate.rs  (+13 more)
rune-rs/core/src/agent/: control.rs  guards.rs  mod.rs  role.rs  status.rs
rune-rs/core/src/auth/: storage.rs
rune-rs/core/src/command_safety/: windows_safe_commands.rs
rune-rs/core/src/config/: edit.rs  mod.rs  profile.rs  schema.md  schema.rs  service.rs  types.rs
rune-rs/core/src/config_loader/: README.md  config_requirements.rs  diagnostics.rs  fingerprint.rs  layer_io.rs  macos.rs  mod.rs  requirements_exec_policy.rs  state.rs  tests.rs
rune-rs/core/src/context_manager/: history.rs  history_tests.rs  mod.rs  normalize.rs
rune-rs/core/src/hooks/: registry.rs  types.rs  user_notification.rs
rune-rs/core/src/instructions/: user_instructions.rs
rune-rs/core/src/mcp/: auth.rs  mod.rs  skill_dependencies.rs
rune-rs/core/src/models_manager/: cache.rs  collaboration_mode_presets.rs  manager.rs  model_info.rs  model_presets.rs
rune-rs/core/src/rollout/: error.rs  list.rs  metadata.rs  mod.rs  policy.rs  recorder.rs  session_index.rs  tests.rs  truncation.rs
rune-rs/core/src/sandboxing/: mod.rs
rune-rs/core/src/skills/: env_var_dependencies.rs  injection.rs  loader.rs  manager.rs  model.rs  remote.rs  system.rs
rune-rs/core/src/state/: service.rs  session.rs  turn.rs
rune-rs/core/src/tasks/: compact.rs  ghost_snapshot.rs  mod.rs  regular.rs  review.rs  undo.rs  user_shell.rs
rune-rs/core/src/tools/: context.rs  events.rs  orchestrator.rs  parallel.rs  registry.rs  router.rs  sandboxing.rs  spec.rs
rune-rs/core/src/unified_exec/: async_watcher.rs  mod.rs  process.rs  process_manager.rs
rune-rs/core/templates/agents/: orchestrator.md
rune-rs/core/tests/: responses_headers.rs
rune-rs/core/tests/common/: Cargo.toml  lib.rs  responses.rs  test_codex_exec.rs  test_rune.rs  test_rune_exec.rs
rune-rs/core/tests/suite/: abort_tasks.rs  agent_websocket.rs  apply_patch_cli.rs  approvals.rs  auth_refresh.rs  cli_stream.rs  client.rs  client_websockets.rs  collaboration_instructions.rs  compact.rs  compact_remote.rs  compact_resume_fork.rs  deprecation_notice.rs  exec.rs  exec_policy.rs  fork_thread.rs  grep_files.rs  hierarchical_agents.rs  image_rollout.rs  items.rs  json_result.rs  list_dir.rs  list_models.rs  live_cli.rs  live_reload.rs  memory_tool.rs  mod.rs  model_info_overrides.rs  (+45 more)
rune-rs/debug-client/: Cargo.toml  README.md
rune-rs/debug-client/src/: client.rs  main.rs  reader.rs  state.rs
rune-rs/exec/: Cargo.toml
rune-rs/exec/src/: cli.rs  event_processor.rs  event_processor_with_human_output.rs  event_processor_with_jsonl_output.rs  exec_events.rs  lib.rs  main.rs
rune-rs/exec/tests/: event_processor_with_json_output.rs
rune-rs/feedback/: Cargo.toml
rune-rs/feedback/src/: lib.rs
rune-rs/lmstudio/: Cargo.toml
rune-rs/lmstudio/src/: client.rs  lib.rs
rune-rs/process-hardening/: Cargo.toml  README.md
rune-rs/process-hardening/src/: lib.rs
rune-rs/stdio-to-uds/: Cargo.toml  README.md
rune-rs/stdio-to-uds/src/: main.rs
rune-rs/stdio-to-uds/tests/: stdio_to_uds.rs
(+648 files in other folders)
