[package]
name = "rune-app-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rune-app-server"
path = "src/main.rs"

[lib]
name = "codex_app_server"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
rune-arg0 = { workspace = true }
rune-cloud-requirements = { workspace = true }
rune-common = { workspace = true, features = ["cli"] }
rune-core = { workspace = true }
rune-backend-client = { workspace = true }
rune-file-search = { workspace = true }
rune-chatgpt = { workspace = true }
rune-login = { workspace = true }
rune-protocol = { workspace = true }
rune-app-server-protocol = { workspace = true }
rune-feedback = { workspace = true }
rune-rmcp-client = { workspace = true }
rune-utils-absolute-path = { workspace = true }
rune-utils-json-to-toml = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
owo-colors = { workspace = true, features = ["supports-colors"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
uuid = { workspace = true, features = ["serde", "v7"] }

[dev-dependencies]
app_test_support = { workspace = true }
axum = { workspace = true, default-features = false, features = [
    "http1",
    "json",
    "tokio",
] }
base64 = { workspace = true }
rune-execpolicy = { workspace = true }
core_test_support = { workspace = true }
rune-utils-cargo-bin = { workspace = true }
os_info = { workspace = true }
pretty_assertions = { workspace = true }
rmcp = { workspace = true, default-features = false, features = [
    "server",
    "transport-streamable-http-server",
] }
serial_test = { workspace = true }
tokio-tungstenite = { workspace = true }
wiremock = { workspace = true }
shlex = { workspace = true }
