[package]
name = "rune-arg0"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "rune_arg0"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
rune-apply-patch = { workspace = true }
rune-core = { workspace = true }
rune-linux-sandbox = { workspace = true }
dotenvy = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
