[package]
name = "rune-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rune"
path = "src/main.rs"

[lib]
name = "rune_cli"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
clap_complete = { workspace = true }
rune-app-server = { workspace = true }
rune-app-server-protocol = { workspace = true }
rune-app-server-test-client = { workspace = true }
rune-arg0 = { workspace = true }
rune-cloud-tasks = { path = "../cloud-tasks" }
rune-common = { workspace = true, features = ["cli"] }
rune-core = { workspace = true }
rune-exec = { workspace = true }
rune-execpolicy = { workspace = true }
rune-mcp-server = { workspace = true }
rune-protocol = { workspace = true }
rune-responses-api-proxy = { workspace = true }
rune-rmcp-client = { workspace = true }
rune-stdio-to-uds = { workspace = true }
rune-tui = { workspace = true }
libc = { workspace = true }
owo-colors = { workspace = true }
regex-lite = { workspace = true }
serde_json = { workspace = true }
supports-color = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
toml = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
rune_windows_sandbox = { package = "rune-windows-sandbox", path = "../windows-sandbox-rs" }

[dev-dependencies]
assert_cmd = { workspace = true }
assert_matches = { workspace = true }
rune-utils-cargo-bin = { workspace = true }
predicates = { workspace = true }
pretty_assertions = { workspace = true }
