[package]
name = "rune-lmstudio"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "rune_lmstudio"
path = "src/lib.rs"


[dependencies]
rune-core = { path = "../core" }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde_json = "1"
tokio = { version = "1", features = ["rt"] }
tracing = { version = "0.1.44", features = ["log"] }
which = "8.0"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full"] }

[lints]
workspace = true
