[package]
name = "rune-stdio-to-uds"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rune-stdio-to-uds"
path = "src/main.rs"

[lib]
name = "rune_stdio_to_uds"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
uds_windows = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
rune-utils-cargo-bin = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
